--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "bald-yeti",
+  "name": "@theyetiweb/bald-yeti",
+  "description": "The Bald Yeti theme is purpose-built for Headless WordPress websites. It is intended to be used in conjunction with a separate front-end application and does not contain any front-end assets.",
   "version": "1.0.0",
   "repository": "git@github.com:theyetiweb/bald-yeti.git",
   "author": "Yeti Web, LLC <contact@yetiweb.io>",
